Fixed spacing between counter and reading toggl.com

--- a/practice-mockup-style.css
+++ b/practice-mockup-style.css
@@ -73,7 +73,8 @@ nav ul li:hover {
 }
 
 #countertop {
-	margin-left: 3em;
+	margin-left: 2em;
+	margin-top: .3em;
 }
 
 #counter {
@@ -85,11 +86,14 @@ nav ul li:hover {
 	color: #e41a24;
 	font-size: 2.5em;
 	font-weight: lighter;
-
+	padding-bottom: 0;
+	margin-bottom: 0;
 }
 
 #read {
-	font-weight:
+	font-size: 1.5em;
+	margin-top: 0;
+	padding-top: 0;
 }
 
 #stop-button {
